--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 
 <body>
-    <div class="result">0</div>
+    <div class="result">10</div>
+    <div class="result2">20</div>
 
     <script src="./js/main.js" type="module"></script>
 </body>
